--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@ span.tooltip {
   <br>Deleting a Puzzle: Click on the puzzle name and delete it.
   <br>
 -->
+  <!-- id is "aaaaa" to make it sort before most users.  --->
+  <span id='whoami.selector'>
+    Who are you? <select id="whoami"><option id="whoami_sortkey_aaaaa" value="">Nobody</option></select>
+  </span>
+  <br>
   Linking a Google Spreadsheet:
   (1) Make a <a target="docs" href="http://docs.google.com/">spreadsheet</a> with <em>exactly</em>
     the same title as the puzzle.  
