--- a/who.html
+++ b/who.html
@@ -99,6 +99,11 @@ Sort:
 <input type=checkbox checked id=checkboxToggleAutoUpdate
  onchange="ToggleAutoUpdate(this);"></label>
 </span>
+<span style="border: thin solid blue; padding: 8px">
+Table Font Size:
+<input type=submit value='+' onclick='TableFontSizeBigger();'>
+<input type=submit value='-' onclick='TableFontSizeSmaller();'>
+</span>
 </div>
 
 
