--- a/who.html
+++ b/who.html
@@ -101,8 +101,8 @@ Sort:
 </span>
 <span style="border: thin solid blue; padding: 8px">
 Table Font Size:
-<input type=submit value='+' onclick='TableFontSizeBigger();'>
-<input type=submit value='-' onclick='TableFontSizeSmaller();'>
+<input type=submit value='+' onClick='TableFontSizeBigger();'>
+<input type=submit value='-' onClick='TableFontSizeSmaller();'>
 </span>
 </div>
 
