Fixed requests regarding issue:2 code review about Table Font Size and Drop-down box.

--- a/branches/whuang/who.html
+++ b/branches/whuang/who.html
@@ -100,9 +100,9 @@ Sort:
  onchange="ToggleAutoUpdate(this);"></label>
 </span>
 <span style="border: thin solid blue; padding: 8px">
-Table Font Size:
-<input type=submit value='+' onClick='TableFontSizeBigger();'>
-<input type=submit value='-' onClick='TableFontSizeSmaller();'>
+Table font size:
+<input type=submit value='+' onClick='AdjustTableFontSize(1.25);'>
+<input type=submit value='-' onClick='AdjustTableFontSize(0.8);'>
 </span>
 </div>
 
