--- a/trunk/index.html
+++ b/trunk/index.html
@@ -81,5 +81,81 @@ span.tooltip {
 
 <div id=tmp class=internal></div>
 <hr>
+
+<!-- documentation goes here. --->
+
+<span id="showfaq" 
+      style="cursor: pointer; color: blue; text-decoration: underline; display: inline;" 
+      onclick="document.getElementById('faq').style.display='inline';
+               document.getElementById('showfaq').style.display='none';
+               document.getElementById('hidefaq').style.display='inline'">How Do I ...</span>
+<span id="hidefaq" 
+      style="cursor: pointer; color: blue; text-decoration: underline; display: none;" 
+      onclick="document.getElementById('faq').style.display='none';
+               document.getElementById('showfaq').style.display='inline';
+               document.getElementById('hidefaq').style.display='none'">How Do I ...</span>
+<span id="faq" style="display: none;">
+
+<DL>
+<DT><B>... get the grey butons to stop saying "WhoRU?"</B></DT>
+<DD>
+  In the upper-left corner, under "Czar", there's a box where you can tell Czar who you are.
+  Every time you reload the page, you'll have to answer this question again.  Sorry about that.
+  You shouldn't need to reload the page most of the time; the data automatically refreshes.
+  (Also, when new puzzles arrive, the button will say "WhoRU?" until you change the contents
+  of that drop-down box.  This is a bug, but we left it in, either because we didn't have time
+  to fix it or because we didn't want y'all to jump on the new puzzles.)
+</DD>
+<DT><B>... get a list of unsolved puzzles?</B></DT>
+<DD>
+  In the "Filter by tags" section, make sure "solved" and "invert" are checked, and no
+  other boxes are.
+</DD>
+<DT><B>... leave a puzzle that I've made no progress on to work on a new puzzle?</B></DT>
+<DD>
+  Click on the light-grey button that says "Do This" on the right side of a puzzle.
+  You'll be telling Czar that you're working on this puzzle, and leaving whatever
+  puzzle you were looking at.  Make sure you are communicating with the people who
+  are already working on the puzzle.
+</DD>
+<DT><B>... see who is working on a puzzle?</B></DT>
+<DD>
+  "(3p)" next to the button means that 3 people are working on it ("3" is just an 
+  example, this could be any number).  Hover your mouse over it to see who those people
+  are.
+</DD>
+<DT><B>... leave a puzzle that I *have* made progress on to work on a new puzzle?</B></DT>
+<DD>
+  Czar keeps track of when people clicked on "Do This", but has no idea who has made
+  progress.  If you've made progress on a puzzle but haven't solved it, make sure you put your
+  name in the puzzle status area (between "sheet" and the tags) so other people
+  picking it up can ask what you've done.  Something like "David can explain this."
+  Then click on "Do This" next to the new puzzle.  Don't just jump to a new puzzle
+  without leaving a clean trail for us to follow, that's scummy.
+</DD>
+<DT><B>... "update my status" when I'm still on the same puzzle?</B></DT>
+<DD>
+  Click on the green button next to your current puzzle (which displays how long since
+  you last clicked on it).  This helps us know that you haven't fallen asleep or disappeared
+  without telling anybody.
+</DD>
+<DT><B>... see who has worked on a puzzle in the past?</B></DT>
+<DD>
+  You can see this on the "who's doing what" page.  Note that we don't distinguish
+  between people who spent a long time on a puzzle and people who briefly looked at
+  it and moved on.  So please update the status box if you have real progress, or
+  at least looked at it for a while and confirmed certain things didn't work.
+</DD>
+<DT><B>... deal with the issue that I have a bunch of progress on a puzzle but I can't
+  write it down for whatever reason but I really need to stop working on it for a while
+  and I promise I'll come back to it and I know this is working on more than one puzzle
+  at a time but it's for a good cause please please please?</B></DT>
+<DD>
+  Sigh.  You can't do this in czar, but it is possible to denote this on the 
+  "Who's doing what" page.  It's an advanced option, you'll have to figure out how to
+  do it yourself or ask the Meta Czar.  
+</DD>
+</span>
+
 </body>
 </html>
