--- a/index.html
+++ b/index.html
@@ -111,18 +111,31 @@ span.tooltip {
   In the "Filter by tags" section, make sure "solved" and "invert" are checked, and no
   other boxes are.
 </DD>
-<DT><B>... leave a puzzle that I've made no progress on to work on a new puzzle?</B></DT>
-<DD>
-  Click on the light-grey button that says "Do This" on the right side of a puzzle.
-  You'll be telling Czar that you're working on this puzzle, and leaving whatever
-  puzzle you were looking at.  Make sure you are communicating with the people who
-  are already working on the puzzle.
-</DD>
 <DT><B>... see who is working on a puzzle?</B></DT>
 <DD>
   "(3p)" next to the button means that 3 people are working on it ("3" is just an 
   example, this could be any number).  Hover your mouse over it to see who those people
   are.
+</DD>
+<DT><B>... work on a new puzzle? (New to me, that is.)</DT>
+<DD>
+  First you need to deal with the last puzzle that you were working on (one of the three
+  cases below).  Then, click on the light-grey button that says "Do This" on the right 
+  side of a puzzle.  You'll be telling Czar that you're working on this puzzle, and leaving whatever
+  puzzle you were looking at.  Make sure you are communicating with the people who
+  are already working on the puzzle.
+</DD>
+<DT><B>... indicate that I've solved a puzzle?</DT>
+<DD>
+  Put the solution (if there is one) in the comment field, add your name(s) to it (so we can
+  come by and ask you how it worked if we need info for a meta), and add the "solved" tag to the
+  tags field.  Then you can move on to a new puzzle!
+</DD>
+<DT><B>... leave a puzzle that I've made no progress on to work on a new puzzle?</B></DT>
+<DD>
+  Don't forget that "could not solve" is not the same as "no progress" -- if you've tried
+  things and didn't work, that's progress, and you should note it (see below).  But if you
+  really didn't do anything, just go to a new puzzle.
 </DD>
 <DT><B>... leave a puzzle that I *have* made progress on to work on a new puzzle?</B></DT>
 <DD>
