--- a/trunk/index.html
+++ b/trunk/index.html
@@ -117,7 +117,7 @@ span.tooltip {
   example, this could be any number).  Hover your mouse over it to see who those people
   are.
 </DD>
-<DT><B>... work on a new puzzle? (New to me, that is.)</DT>
+<DT><B>... work on a new puzzle? ("new" as in it wasn't the last puzzle I was doing.)</B></DT>
 <DD>
   First you need to deal with the last puzzle that you were working on (one of the three
   cases below).  Then, click on the light-grey button that says "Do This" on the right 
@@ -125,7 +125,7 @@ span.tooltip {
   puzzle you were looking at.  Make sure you are communicating with the people who
   are already working on the puzzle.
 </DD>
-<DT><B>... indicate that I've solved a puzzle?</DT>
+<DT><B>... indicate that I've solved a puzzle?</B></DT>
 <DD>
   Put the solution (if there is one) in the comment field, add your name(s) to it (so we can
   come by and ask you how it worked if we need info for a meta), and add the "solved" tag to the
