--- a/trunk/who.html
+++ b/trunk/who.html
@@ -9,7 +9,8 @@
 td.active {text-align:right}
 td.nonactive {text-align: right }
 td.nonexclusive {text-align: right }
-td.nonpuzzle { background-color:#fc9; }
+td.nonpuzzlelt { background-color:#fc9; }
+td.nonpuzzledk { background-color:#da7; }
 td.focused { border: 1px solid #AAAAAA; }
 
 td.smaller { font-size:68%; }
@@ -166,7 +167,7 @@ Add activity: <input onchange="AddActivity(this);"><br>
     <td></td>
   </tr>
   <tr>
-    <td class=nonpuzzle>Sleeping</td>
+    <td class=nonpuzzlelt>Sleeping</td>
     <td></td>
     <td></td>
     <td class=active>:15</td>
