Fixed minor HTML bug with sorting by user.

--- a/trunk/who.html
+++ b/trunk/who.html
@@ -90,11 +90,12 @@ Sort:
 	    <label for=radioRecency>
 	    <input type=radio name="sortOrder" id=radioRecency
 	    onchange=RedrawTable()>By&nbsp;recency</label>
-	   <label for=radioRecencyReverse>
+            <label for=radioRecencyReverse>
 	    <input type=radio name="sortOrder" id=radioRecencyReverse
 	    onchange=RedrawTable()>By&nbsp;recency&nbsp;(reverse)</label>
+            <label>
 	    <input type=radio name="sortOrder" id=radioUser
-	    onchange=RadioUserSelected()>By&nbsp;User:</label>
+	    onchange=RadioUserSelected()>By&nbsp;person:</label>
             <select disabled id=sortUserSelect>
               <option value="">Select...</option>
             </select>
