--- a/trunk/index.html
+++ b/trunk/index.html
@@ -3,7 +3,7 @@
 <title>Czar</title>
 <style>
 
-body { background-color: #FFFFFF; color: #000000; font: 100% sans-serif; }
+body { background: #FFFFFF; color: #000000; font: 100% sans-serif; }
 div.internal { display: none; }
 
 form a { font-size: 80%; margin-right: 10px; }
@@ -12,21 +12,25 @@ form.marked a.missing { text-decoration: line-through; }
 form { margin: 0; }
 form.deleted { display: none; }
 form.marked * { text-decoration: line-through; }
-form.marked input { background-color: #FFFFFF; color: #000000; }
+form.marked input { color: #000000; }
 form.marked input.countdown { color: #AA0000; text-decoration: none; }
 
-input { font: 100% sans-serif; border: 1px solid #FFFFFF; margin-right: 10px; }
-input.dirty { border: 1px solid #7777FF; }
-input.empty { color: #888888; }
-input.focused { border: 1px solid #AAAAAA; }
-input.inflight { border: 1px solid #BBCCFF; }
+div#items > form:nth-child(odd) { background: #DDD; }
+div#items > form:nth-child(odd) * { background: #DDD; }
+div#items > form:nth-child(odd) input { background: #DDD; border-color: #DDD }
+
+input { font: 100% sans-serif; border: 1px solid #FFF; margin-right: 10px; }
+input.dirty { border: 1px solid #77F !important }
+input.empty { color: #888; }
+input.focused { border: 1px solid #AAA !important }
+input.inflight { border: 1px solid #BCF !important }
 
 span.tooltip input { margin-right: 0; font-size: 80% }
 span.tooltip { 
   position: absolute;
   visibility: hidden;
   padding: 3 3 3 3;
-  background: #FFFFFF; border: 1px solid #888888;
+  background: #FFF; border: 1px solid #888;
 }
 
 </style>
@@ -35,18 +39,13 @@ span.tooltip {
 <script language="JavaScript" src="log.js"></script>
 <script language="JavaScript" src="tags.js"></script>
 <script language="JavaScript" src="who-data.js"></script>
-<script language="JavaScript" src="czar.js"></script>
+<script language="JavaScript" src="test.js"></script>
 </head>
 
 <body onload="start_czar('http://czar*.ofb.net:8888/mh10')">
 <img src=czar.jpeg style="float: left; margin-right: 10; margin-bottom: 15;">
 <div style="margin-left: 10">
   <a href="http://code.google.com/p/czar/"><h2 style="margin-top: 0">Czar</h2></a>
-<!--
-  Creating a Puzzle: Click on "Click to enter new puzzle name" below, type in the puzzle name.
-  <br>Deleting a Puzzle: Click on the puzzle name and delete it.
-  <br>
--->
   <!-- id is "aaaaa" to make it sort before most users.  --->
   <span id='whoami.selector'>
     Who are you? <select id="whoami"><option id="whoami_sortkey_aaaaa" value="">Nobody</option></select>
