oops, remove test hack

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ span.tooltip {
 <script language="JavaScript" src="log.js"></script>
 <script language="JavaScript" src="tags.js"></script>
 <script language="JavaScript" src="who-data.js"></script>
-<script language="JavaScript" src="test.js"></script>
+<script language="JavaScript" src="czar.js"></script>
 </head>
 
 <body onload="start_czar('http://czar*.ofb.net:8888/mh10')">
