--- a/trunk/index.html
+++ b/trunk/index.html
@@ -45,7 +45,9 @@ span.tooltip {
 <body onload="start_czar('http://czar*.ofb.net:8888/mh10')">
 <img src=czar.jpeg style="float: left; margin-right: 10; margin-bottom: 15;">
 <div style="margin-left: 10">
-  <a href="http://code.google.com/p/czar/"><h2 style="margin-top: 0">Czar</h2></a>
+  <h2 style="margin-top: 0">Czar
+  <a style="font-size:50%" href="who.html">(Back to Who)</a>
+  </h2>
   <!-- id is "aaaaa" to make it sort before most users.  --->
   <span id='whoami.selector'>
     Who are you? <select id="whoami"><option id="whoami_sortkey_aaaaa" value="">Nobody</option></select>
