using emagino.com to host stateserver

--- a/trunk/who.html
+++ b/trunk/who.html
@@ -41,7 +41,7 @@ td.smaller { font-size:68%; }
 </head>
 
 
-<body onLoad=Init('http://czar*.ofb.net:8888/mh10')>
+<body onLoad=Init('http://czar*.emagino.ofb.net:8888/mh10')>
 
 <div class=title>Who's Doing What
 <a style="font-size:50%" href=".">(Back to Czar)</a>
