Highlight the current user on the Who page.

--- a/trunk/who.html
+++ b/trunk/who.html
@@ -32,6 +32,7 @@ td.focused { border: 1px solid #AAAAAA; }
 <script language="JavaScript" src="json2.js"></script>
 <script language="JavaScript" src="log.js"></script>
 <script language="JavaScript" src="stateserver.js"></script>
+<script language="JavaScript" src="cookie.js"></script>
 <script language="JavaScript" src="tags.js"></script>
 <script language="JavaScript" src="who-data.js"></script>
 <script language="JavaScript" src="who.js"></script>
