--- a/who.html
+++ b/who.html
@@ -95,6 +95,9 @@ Sort rows:
 	    <input type=radio name="sortOrder" id=radioRecencyReverse
 	    onchange=RedrawTable()>By&nbsp;recency&nbsp;(reverse)</label>
             <label>
+	    <input type=radio name="sortOrder" id=radioNumActives
+	    onchange=RedrawTable()>By&nbsp;#actives</label>
+            <label>
 	    <input type=radio name="sortOrder" id=radioUser
 	    onchange=RadioUserSelected()>By&nbsp;person:</label>
             <select disabled id=sortUserSelect>
