--- a/who.html
+++ b/who.html
@@ -35,6 +35,7 @@ td.focused { border: 1px solid #AAAAAA; }
 <script language="JavaScript" src="cookie.js"></script>
 <script language="JavaScript" src="tags.js"></script>
 <script language="JavaScript" src="who-data.js"></script>
+<script language="JavaScript" src="notifications.js"></script>
 <script language="JavaScript" src="who.js"></script>
 
 </head>
