Create a notification on the Who page.  Adding the 'solved' tag to a puzzle sends a notification that is displayed on all screens open to Who.

--- a/trunk/who.html
+++ b/trunk/who.html
@@ -35,6 +35,7 @@ td.focused { border: 1px solid #AAAAAA; }
 <script language="JavaScript" src="cookie.js"></script>
 <script language="JavaScript" src="tags.js"></script>
 <script language="JavaScript" src="who-data.js"></script>
+<script language="JavaScript" src="notifications.js"></script>
 <script language="JavaScript" src="who.js"></script>
 
 </head>
