--- a/trunk/index.html
+++ b/trunk/index.html
@@ -40,6 +40,7 @@ span.tooltip {
 <script language="JavaScript" src="cookie.js"></script>
 <script language="JavaScript" src="tags.js"></script>
 <script language="JavaScript" src="who-data.js"></script>
+<script language="JavaScript" src="notifications.js"></script>
 <script language="JavaScript" src="czar.js"></script>
 </head>
 
