--- a/trunk/index.html
+++ b/trunk/index.html
@@ -34,6 +34,7 @@ span.tooltip {
 }
 
 </style>
+<script language="JavaScript" src="soundmanager2-nodebug-jsmin.js"></script>
 <script language="JavaScript" src="json2.js"></script>
 <script language="JavaScript" src="stateserver.js"></script>
 <script language="JavaScript" src="log.js"></script>
@@ -42,6 +43,16 @@ span.tooltip {
 <script language="JavaScript" src="who-data.js"></script>
 <script language="JavaScript" src="notifications.js"></script>
 <script language="JavaScript" src="czar.js"></script>
+
+<!-- configure soundmanager2 -->
+<script type="text/javascript">
+soundManager.url = 'swf';
+soundManager.useHTML5Audio = true;
+soundManager.useFlashBlock = true;
+soundManager.debugMode = false;
+soundManager.onload = function() { };
+</script>
+
 </head>
 
 <!-- body onload="start_czar('http://czar*.emagino.ofb.net:5222/mh10')" -->
