Modifications to making this work for MH 2012 ... and now 2013.

--- a/trunk/who.html
+++ b/trunk/who.html
@@ -52,8 +52,8 @@ soundManager.onload = function() { };
 </head>
 
 
-<!-- body onLoad=Init('http://czar*.emagino.ofb.net:5222/mh2011') -->
-<body onLoad=Init('http://squirrel.the4cs.com:5222/mh2011')>
+<body onLoad=Init('http://czar.emagino.net:433/mh2013')>
+<!-- body onLoad=Init('http://squirrel.the4cs.com:5222/mh2011') -->
 
 <div class=title>Who's Doing What
 <a style="font-size:50%" href=".">(Back to Czar)</a>
@@ -166,7 +166,8 @@ Add activity: <input onchange="AddActivity(this);"><br>
     <ul>
       <li>You can rename any person or activity by clicking their name
 	  in the table.
-      <li>You cannot delete any person or activity.  Contact Corey if
+      <li>You cannot delete any person or activity.  Contact Dan (Boston)
+          or Wei-Hwa (Los Altos) if
 	  you added something you didn't mean to.
       <li>New activities, new people, and changes in work assignments
 	  appear automatically.  The Update every minute checkbox is
